Fix issue with markdown del/ins lines not keeping white space between del/ins marks and actual content

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -267,8 +267,6 @@ code > .deleted::before {
   border-left-color: #d01212;
   border-left-width: 3px;
   border-left-style: solid;
-  counter-increment: line;
-  content: "-";
 }
 
 code > .inserted {
